--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -24,7 +24,26 @@
         color: black;
     }
     
+    #mensaje{
+        box-shadow: 0px 0px 10px black;
 
+        animation-name: eliminar;
+        animation-duration: 4s;
+        opacity: 0;
+        @keyframes eliminar{
+            0%{ 
+                opacity: 0;
+            }
+
+            50%{
+                opacity: 1;
+            }
+
+            100%{
+                opacity: 0;
+            }
+        }
+    }
     span{
         color: black;
     }
