Hize cambio en la tipografia

--- a/src/app/acerca-de/acerca-de.page.html
+++ b/src/app/acerca-de/acerca-de.page.html
@@ -16,7 +16,7 @@
         </ion-item>
         <ion-item>
           <ion-button class="my-3" shape="round" size="default" routerLink="/login">
-            <ion-icon class="me-3 mb-1" name="arrow-back-outline"></ion-icon> logout/login
+            <ion-icon class="me-3 mb-1" name="arrow-back-outline"></ion-icon> logout
           </ion-button>
         </ion-item>
       </ion-list>
