--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,7 @@
       height: 200px;
     }
     ion-content {
-      --background: rgb(255, 255, 255);
+      --background: rgba(255, 255, 255, 0.936);
     }
     ion-toolbar {
       --background: rgba(255, 255, 255, 0);
