--- a/src/app/acerca-de/acerca-de.page.scss
+++ b/src/app/acerca-de/acerca-de.page.scss
@@ -2,16 +2,20 @@
     ion-title{
         font-family: 'Italiana', serif;
         color: black;
+        font-weight: bolder;
     }
     
     ion-button{
         --background:rgba(0, 0, 0, 0.726);
+        font-family: 'Italiana', serif;
+        text-shadow: 0px 0px 1px white;
+        font-weight: bolder;
     }
 
     p{
         color:black;
-        font-family: 'Montserrat', sans-serif;
-        text-shadow: 0px 0px 15px black;
+        font-family: 'Italiana', serif;
+        font-weight: bolder;
     }
     
     @keyframes logo{
@@ -27,6 +31,7 @@
     }
     ion-item{
         --background:white;
+        
     }
     ion-list{
         border:1px solid black;
@@ -34,34 +39,12 @@
     h1{
         font-family: 'Italiana', serif;
         color:black;
-        text-shadow: 0px 0px 15px black;
-
+        text-shadow: 0px 0px 1px black;
+        font-weight: bolder;
     }
 
-    @keyframes letra{
-        0%{
-            text-shadow: 0 0 10px #D4AF37, 0 0 40px #D4AF37, 0 0 80px #D4AF37;
-        }
-        50%{
-            text-shadow: 0 0 10px white, 0 0 40px white, 0 0 80px white;
-        }
-        100%{
-            text-shadow: 0 0 10px #D4AF37, 0 0 40px #D4AF37, 0 0 80px #D4AF37;
-        }
-    }
-
-    @keyframes box{
-        0%{
-            box-shadow: 0 0 10px #D4AF37, 0 0 40px #D4AF37, 0 0 80px #D4AF37;
-        }
-        50%{
-            box-shadow: 0 0 10px white, 0 0 40px white, 0 0 80px white;
-        }
-        100%{
-            box-shadow: 0 0 10px #D4AF37, 0 0 40px #D4AF37, 0 0 80px #D4AF37;
-        }
-    }
     #main-content{
         --background:transparent;
     }
+
 }
