--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -9,23 +9,26 @@
     font-size: 20px;
     text-transform: uppercase;
     padding: 7px;
+    text-shadow: 0px 0px 1px black;
+    font-weight: bolder;
   }
 
 
   input {
     font-family: 'Italiana', serif;
-
+    font-weight: bolder;
   }
 
   input:hover {
     font-family: 'Italiana', serif;
     box-shadow: 0 0 10px black, 0 0 40px black, 0 0 80px black;
-
+    font-weight: bolder;
   }
 
   span:hover {
     text-shadow: 0 0 10px black, 0 0 40px black, 0 0 80px black;
     text-decoration: underline;
+    font-weight: bolder;
   }
 
   ion-button {
@@ -33,11 +36,13 @@
     color: black;
     font-size: 18px;
     font-family: 'Italiana', serif;
+    font-weight: bolder; 
   }
 
   h5 {
     font-family: 'Italiana', serif;
     color: black;
+    font-weight: bolder;
   }
 
   ion-button:hover {
