--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -9,18 +9,19 @@
       font-size: 20px;
       text-transform: uppercase;
       padding: 7px;
+      font-weight: bolder;
     }
   
   
     input {
       font-family: 'Italiana', serif;
-  
+      font-weight: bolder;
     }
   
     input:hover {
       font-family: 'Italiana', serif;
       box-shadow: 0 0 10px black, 0 0 40px black, 0 0 80px black;
-  
+      font-weight: bolder;
     }
   
     span:hover {
@@ -33,11 +34,13 @@
       color: black;
       font-size: 18px;
       font-family: 'Italiana', serif;
+      font-weight: bolder;
     }
   
     h5 {
       font-family: 'Italiana', serif;
       color: black;
+      font-weight: bolder;
     }
   
     ion-button:hover {
