Perdon ahora si el final

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,8 +11,8 @@
             <div class="col-sm-6">
                 <form action="" class="text-center">
                     <div class="form-group mb-4">
-                        <label for="" class="form-label rounded mb-3 ">Usuario</label>
-                        <input type="text" placeholder="Ingrese usuario" class="form-control">
+                        <label for="" class="form-label rounded mb-3 ">Correo Institucional</label>
+                        <input type="email" placeholder="Ingrese su correo de DuocUc" class="form-control">
                     </div>
                     <div class="form-group mb-2">
                         <label for="" class="form-label rounded mb-3 ">Contraseña</label>
