--- a/src/app/acerca-de/acerca-de.page.scss
+++ b/src/app/acerca-de/acerca-de.page.scss
@@ -50,3 +50,8 @@
     #main-content {
         --background: transparent;
     }
+
+    ion-img{
+        width: auto;
+        height: auto;
+    }
