--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -61,7 +61,7 @@
 
     #cont{
         position: absolute;
-        margin-top: 145px;
+        margin-top: 100px;
         border: 1px solid black;
         background-color: rgba(0, 0, 0, 0.619);
         animation: cont 2.5s;
@@ -70,6 +70,7 @@
         text-shadow: 0px 0px 1px white;
         font-weight: bolder;
         text-align: center;
+        position: fixed;
     }
 
     @keyframes logo{
