--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -4,8 +4,13 @@
     </div>
 
 
-    <div>
-        <ion-button routerLink="/inicio">Volver</ion-button>
-    </div>
+    <div *ngFor="let i of usuario">
+        <div *ngIf="i.vehiculo == 'No' else Conductor ">
+            <ion-button routerLink="/buscar-vehiculo">Cancelar Viaje</ion-button>
+        </div>
 
+        <ng-template #Conductor>
+            <ion-button routerLink="/inicio">Terminar Viaje</ion-button>
+        </ng-template>
+    </div>
 </ion-content>
